[package]
name = "packlet"
version = "0.1.1"
edition = "2021"
description = "A high-performance tool that bundles local code dependencies into a single markdown file by following import statements from an entry point"
license = "MIT"
repository = "https://github.com/kirillleventcov/packlet"
readme = "README.md"
keywords = ["bundler", "javascript", "typescript", "dependencies", "markdown"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "2.0.16"
async-trait = "0.1.73"
dashmap = "6.1.0"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.9.7"
walkdir = "2.3.3"
regex = "1.9.5"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
env_logger = "0.11.8"
swc_common = "14.0.4"
swc_ecma_visit = "15.0.0"
swc_ecma_ast = "15.0.0"
path-absolutize = "3.1.0"
num_cpus = "1.16.0"
swc_ecma_parser = "24.0.1"
lru = "0.16.1"
